# weathercli

./: Cargo.toml  flake.nix  module.nix  readme.md
src/: caching.rs  main.rs  providers.rs
