[package]
name = "weather-cli"
version = "0.2.1"
description = "A Simple Weather Cli"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
toml = "0.8"
